small update layout

--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -39,7 +39,8 @@
                             </ul>
                             <div class="tab-container">
                                 <div id="tab-1" class="tab-panel active">
-                                    <ul class="row product-list grid">
+                                    @*<ul class="row product-list grid">*@
+                                    <ul class="row product-list owl-carousel" data-dots="false" data-loop="true" data-nav="true" data-margin="30" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3}}'>
                                         @if (ViewData["newestProduct"] != null)
                                         {
                                             SearchResult productSearchResult = (SearchResult)ViewData["newestProduct"];
@@ -47,7 +48,8 @@
                                             {
                                                 foreach (var item in productSearchResult.Item)
                                                 {
-                                                    <li class="col-sx-12 col-sm-4">
+                                                    @*<li class="col-sx-12 col-sm-4">*@
+                                                    <li>
                                                         <div class="product-container">
                                                             <div class="left-block">
                                                                 <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
@@ -61,7 +63,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
@@ -107,20 +109,20 @@
                                                                 <img class="img-responsive" alt="@item.PrName" src="@item.Images" />
                                                                 @if (item.Rank >= 1)
                                                                 {
-                                                                    <div class="featured-text"><span>Bán chạy</span></div>
+                                                                <div class="featured-text"><span>Bán chạy</span></div>
                                                                 }
                                                             </a>
                                                             <div class="quick-view">
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                             </div>
                                                             <div class="add-to-cart">
-                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">thêm vào giỏ hàng</a>
+                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                             </div>
                                                             <div class="group-price">
                                                                 <span class="product-new">Mới</span>
                                                                 @if (item.IsSale)
                                                                 {
-                                                                    <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
+                                                                <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
                                                                 }
                                                             </div>
                                                         </div>
@@ -129,12 +131,12 @@
                                                             <div class="content_price">
                                                                 @if (item.IsSale)
                                                                 {
-                                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
+                                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
                                                                 }
                                                             </div>
 
@@ -169,7 +171,7 @@
                                                                     <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                                 </div>
                                                                 <div class="add-to-cart">
-                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Thêm vào giỏ hàng</a>
+                                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Đặt mua</a>
                                                                 </div>
                                                                 <div class="group-price">
                                                                     <span class="product-new">Mới</span>
